label bugs fixed on safari

--- a/src/Pages/Contact/Styles/contactInputApp.css
+++ b/src/Pages/Contact/Styles/contactInputApp.css
@@ -72,7 +72,7 @@
   padding-left: 13px;
   font-size: 12px;
 }
-.flag {
+/* .flag {
   transform: scale(0.85) translateY(-1.4rem) translateX(0.15rem);
   width: auto;
-}
+} */
